<resources>
    <string name="app_name">EchipamenteAutomatizare</string>

    <string name="drawer_item_cpus">CPUs</string>
    <string name="drawer_item_io_onboard">I/Os Onboard</string>
    <string name="drawer_item_cards">Cards</string>
    <string name="drawer_item_protocols">Protocols</string>
    <string name="drawer_item_manufacturers">Manufacturers</string>

    <string-array name="card_names">
        <item>DI</item>
        <item>DO</item>
        <item>AI</item>
        <item>AO</item>
        <item>CM</item>
    </string-array>
</resources>
